crates/parser/src/snapshots/parser__tests__err_test@0026_let_part_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "let { a := b; := c }\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0026_let_part_no_pat.ath
---
LET_EXPR
  LET_KW "let"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_PART
    IDENT_PAT
      IDENTIFIER
        IDENT "a"
        WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "b"
  LET_PART
    SEMI ";"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "c"
        WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 14: Expected to find a pattern for the let binding

