crates/parser/src/snapshots/parser__tests__err_test@0027_let_rec_part_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "letrec { a := b; := c }\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0027_let_rec_part_no_pat.ath
---
LET_REC_EXPR
  LETREC_KW "letrec"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_PART
    IDENTIFIER
      IDENT "a"
      WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "b"
  LET_PART
    SEMI ";"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "c"
        WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 17: Expected to find an identifier for the letrec binding

