crates/parser/src/snapshots/parser__tests__err_test@0031_match_arm_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "match foo { => bar }\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0031_match_arm_no_pat.ath
---
MATCH_EXPR
  MATCH_KW "match"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
        WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  MATCH_ARM
    FAT_ARROW "=>"
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "bar"
        WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 12: Expected to find a pattern for the match arm

