crates/parser/src/snapshots/parser__tests__err_test@0032_match_expr_no_arm.ath.snap
---
source: crates/parser/src/tests.rs
description: "match foo {  }\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0032_match_expr_no_arm.ath
---
MATCH_EXPR
  MATCH_KW "match"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
        WHITESPACE " "
  L_CURLY "{"
  WHITESPACE "  "
  R_CURLY "}"
  WHITESPACE "\n"
error 13: Expected at least one arm in the match expression

