crates/parser/src/snapshots/parser__tests__err_test@0033_match_arm_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "match foo { bar => }\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0033_match_arm_no_expr.ath
---
MATCH_EXPR
  MATCH_KW "match"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
        WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  MATCH_ARM
    IDENT_PAT
      IDENTIFIER
        IDENT "bar"
        WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 19: Expected to find an expression for the match arm

